--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="3sp">
 
     <TextView
         android:id="@+id/text1"
@@ -14,7 +15,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/text2"
         app:layout_constraintHorizontal_chainStyle="spread"
-        android:padding="5dp"
+        android:padding="2sp"
         android:textAlignment="center"
         android:textStyle="bold"/>
 
@@ -27,9 +28,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/text1"
         app:layout_constraintRight_toLeftOf="@id/text3"
-        android:padding="5dp"
-        android:layout_margin="10dp"
-        android:textStyle="bold"/>
+        android:padding="5sp"
+        android:layout_margin="10sp"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:textSize="20sp"/>
 
     <TextView
         android:id="@+id/text3"
@@ -40,8 +43,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@id/text2"
-        android:padding="5dp"
-        android:layout_margin="10dp"
+        android:padding="5sp"
+        android:layout_margin="10sp"
+        android:textAlignment="center"
         android:textStyle="bold" />
 
 
