--- a/app/src/main/res/layout/first_item.xml
+++ b/app/src/main/res/layout/first_item.xml
@@ -2,51 +2,50 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="3sp">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/text1"
-        android:layout_width="0dp"
-        app:layout_constraintHorizontal_weight="1"
+        android:layout_width="0sp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="20sp"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintHorizontal_weight="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/text2"
-        app:layout_constraintHorizontal_chainStyle="spread"
-        android:padding="2sp"
-        android:textAlignment="center"
-        android:textStyle="bold"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/text2"
-        android:layout_width="0dp"
-        app:layout_constraintHorizontal_weight="2"
+        android:layout_width="0sp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_weight="3"
+        android:layout_margin="5sp"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/text1"
-        app:layout_constraintRight_toLeftOf="@id/text3"
-        android:padding="5sp"
-        android:layout_margin="10sp"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:textSize="20sp"/>
+        app:layout_constraintRight_toLeftOf="@id/callButton"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-    <TextView
-        android:id="@+id/text3"
-        android:layout_width="0dp"
-        app:layout_constraintHorizontal_weight="2"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+    <ImageButton
+        android:id="@+id/callButton"
+        android:layout_width="0sp"
+        android:layout_height="65sp"
+        app:layout_constraintHorizontal_weight="1"
+        android:adjustViewBounds="true"
+        android:focusableInTouchMode="true"
+        android:layout_margin="10sp"
+        android:src="@mipmap/ic_call_round"
+        android:scaleType="centerCrop"
+        android:background="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@id/text2"
-        android:padding="5sp"
-        android:layout_margin="10sp"
-        android:textAlignment="center"
-        android:textStyle="bold" />
-
+        app:layout_constraintTop_toTopOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
