--- a/app/src/main/res/layout/third_fragment.xml
+++ b/app/src/main/res/layout/third_fragment.xml
@@ -1,13 +1,146 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.main.ThirdFragment">
+    android:layout_height="match_parent">
 
-    <TextView
+    <LinearLayout
+        android:id="@+id/twobuttons"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/fromcamera"
+            android:layout_weight="1"
+            android:layout_width="125dp"
+            android:layout_height="50dp"
+            android:background="@color/green"
+            android:shadowColor="#000000"
+            android:radius="5dp"
+            android:text="Camera"
+            android:textSize="20sp"
+            android:textColor="#FFFFFF"
+/>
+
+        <Button
+            android:id="@+id/fromgallery"
+            android:layout_weight="1"
+            android:layout_width="125dp"
+            android:layout_height="50dp"
+            android:background="@color/green"
+            android:radius="5dp"
+            android:shadowColor="#000000"
+            android:textSize="20sp"
+            android:textColor="#FFFFFF"
+            android:text="Gallery"/>
+
+        <Button
+            android:id="@+id/sendmessage"
+            android:layout_weight="1"
+            android:layout_width="125dp"
+            android:layout_height="50dp"
+            android:background="@color/orange"
+            android:shadowColor="#000000"
+            android:radius="5dp"
+            android:text="Send"
+            android:textSize="20sp"
+            android:textColor="#FFFFFF"/>
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id = "@+id/imagentext"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
+        android:layout_above="@+id/threebuttons"
+        android:layout_below="@+id/twobuttons">
 
-</FrameLayout>
+        <ImageView
+            android:id="@+id/result_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerInside" />
+
+        <TextView
+            android:id="@+id/noimagetext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/result_image"
+            android:layout_alignStart="@+id/result_image"
+            android:layout_alignEnd="@+id/result_image"
+            android:layout_alignTop="@+id/result_image"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:text="@string/noimgae"/>
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/threebuttons"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/crop"
+            android:layout_width="40dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:background="@color/orange"
+            android:radius="5dp"
+            android:shadowColor="#000000"
+            android:textColor="#FFFFFF"
+            android:textSize="15sp"
+            android:text="Crop"/>
+
+        <Button
+            android:id="@+id/filter1"
+            android:layout_weight="1"
+            android:layout_width="20dp"
+            android:layout_height="50dp"
+            android:background="@color/green"
+            android:radius="5dp"
+            android:shadowColor="#000000"
+            android:textSize="15sp"
+            android:textColor="#FFFFFF"
+            android:text="F 1"/>
+
+        <Button
+            android:id="@+id/filter2"
+            android:layout_weight="1"
+            android:layout_width="20dp"
+            android:layout_height="50dp"
+            android:background="@color/green"
+            android:shadowColor="#000000"
+            android:radius="5dp"
+            android:textSize="15sp"
+            android:textColor="#FFFFFF"
+            android:text="F 2" />
+
+        <Button
+            android:id="@+id/filter3"
+            android:layout_weight="1"
+            android:layout_width="20dp"
+            android:layout_height="50dp"
+            android:background="@color/green"
+            android:radius="5dp"
+            android:shadowColor="#000000"
+            android:textSize="15sp"
+            android:textColor="#FFFFFF"
+            android:text="F 3" />
+
+        <Button
+            android:id="@+id/filter4"
+            android:layout_weight="1"
+            android:layout_width="20dp"
+            android:layout_height="50dp"
+            android:background="@color/green"
+            android:shadowColor="#000000"
+            android:radius="5dp"
+            android:textSize="15sp"
+            android:textColor="#FFFFFF"
+            android:text="F 4" />
+
+    </LinearLayout>
+
+
+</RelativeLayout>
