--- a/app/src/main/res/layout/first_item.xml
+++ b/app/src/main/res/layout/first_item.xml
@@ -3,25 +3,27 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="15sp">
+    android:padding="5sp">
 
     <TextView
         android:id="@+id/text2"
         android:layout_width="0dp"
-        android:layout_height="50sp"
-        android:layout_weight="1.0"
-        android:layout_marginLeft="30sp"
-        android:layout_marginRight="20sp"
+        android:layout_height="60sp"
+        android:layout_weight="1"
+        android:layout_marginStart="30sp"
+        android:layout_marginEnd="20sp"
         android:gravity="center|left"
+        android:padding="3sp"
         android:text="OOOO"
         android:textSize="25sp"
         android:textStyle="bold" />
 
     <ImageButton
         android:id="@+id/messageButton"
-        android:layout_width="50sp"
-        android:layout_height="50sp"
-        android:layout_marginRight="10sp"
+        android:layout_width="60sp"
+        android:layout_height="match_parent"
+        android:layout_marginEnd="5sp"
+        android:padding="3sp"
         android:adjustViewBounds="true"
         android:background="@android:color/transparent"
         android:scaleType="centerCrop"
@@ -29,9 +31,11 @@
 
     <ImageButton
         android:id="@+id/callButton"
-        android:layout_width="50sp"
-        android:layout_height="50sp"
-        android:layout_marginLeft="10sp"
+        android:layout_width="60sp"
+        android:layout_height="match_parent"
+        android:layout_marginStart="5sp"
+        android:layout_marginEnd="15sp"
+        android:padding="3sp"
         android:adjustViewBounds="true"
         android:background="@android:color/transparent"
         android:scaleType="centerCrop"
