--- a/app/src/main/res/layout/frist_edittext.xml
+++ b/app/src/main/res/layout/frist_edittext.xml
@@ -2,6 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp"
+    android:paddingStart="10dp"
+    android:paddingEnd="10dp"
     android:orientation="vertical">
 
     <EditText
@@ -9,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="15sp"
+        android:layout_marginTop="8dp"
         android:hint="Name" />
 
     <EditText
@@ -16,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="15sp"
+        android:layout_marginTop="8dp"
         android:hint="Group" />
 
     <EditText
@@ -23,14 +29,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="15sp"
+        android:layout_marginTop="8dp"
         android:hint="Number(000-0000-0000)" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/okbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Done"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="@color/darkdark"
+        android:text="OK"
+        android:textColor="#FFFFFF"
         android:textSize="20sp" />
 
 </LinearLayout>
