--- a/Project123-googleMap/app/src/main/res/menu/nav_content.xml
+++ b/Project123-googleMap/app/src/main/res/menu/nav_content.xml
@@ -12,19 +12,19 @@
             <item
                 android:id="@+id/money"
                 android:icon="@drawable/ic_money"
-                android:title="@string/app_name"/>
+                android:title="@string/none"/>
             <item
                 android:id="@+id/total_time"
                 android:icon="@drawable/ic_time"
-                android:title="@string/app_name" />
+                android:title="@string/none"/>
             <item
                 android:id="@+id/total_dist"
                 android:icon="@drawable/ic_distance"
-                android:title="@string/app_name" />
+                android:title="@string/none"/>
             <item
                 android:id="@+id/calory"
                 android:icon="@drawable/ic_calory"
-                android:title="@string/app_name" />
+                android:title="@string/none"/>
         </menu>
     </item>
 
@@ -34,11 +34,11 @@
             <item
                 android:id="@+id/first_time"
                 android:icon="@drawable/ic_time"
-                android:title="@string/app_name" />
+                android:title="@string/none"/>
             <item
                 android:id="@+id/first_dist"
                 android:icon="@drawable/ic_distance"
-                android:title="@string/app_name" />
+                android:title="@string/none"/>
         </menu>
     </item>
 
@@ -48,11 +48,11 @@
             <item
                 android:id="@+id/second_time"
                 android:icon="@drawable/ic_time"
-                android:title="@string/app_name" />
+                android:title="@string/none"/>
             <item
                 android:id="@+id/second_dist"
                 android:icon="@drawable/ic_distance"
-                android:title="@string/app_name"/>
+                android:title="@string/none"/>
         </menu>
     </item>
 
@@ -62,18 +62,18 @@
             <item
                 android:id="@+id/third_time"
                 android:icon="@drawable/ic_time"
-                android:title="@string/app_name"/>
+                android:title="@string/none"/>
             <item
                 android:id="@+id/third_dist"
                 android:icon="@drawable/ic_distance"
-                android:title="@string/app_name" />
+                android:title="@string/none"/>
         </menu>
     </item>
     <group android:checkableBehavior="single">
 
         <item
             android:id="@+id/logout"
-            android:icon="@drawable/ic_facebook"
+            android:icon="@drawable/ic_facebook_logo"
             android:title="로그아웃" />
     </group>
 
