--- a/Project123-googleMap/app/src/main/res/layout/nav_header.xml
+++ b/Project123-googleMap/app/src/main/res/layout/nav_header.xml
@@ -13,30 +13,29 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
         android:contentDescription="image"
         android:paddingTop="8dp"
         app:srcCompat="@mipmap/ic_launcher_round" />
 
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="8dp"
         android:layout_marginEnd="15dp"
+        android:id="@+id/name"
         android:text="name"
-        android:textAlignment="textEnd"
+        android:textSize="20dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
-        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
+        android:layout_marginEnd="10dp"
+        android:id="@+id/email"
         android:text="email"
-        android:textAlignment="textEnd"/>
+        android:visibility="invisible"/>
 
 </LinearLayout>
