--- a/Project123-googleMap/app/src/main/res/menu/nav_content.xml
+++ b/Project123-googleMap/app/src/main/res/menu/nav_content.xml
@@ -75,6 +75,11 @@
             android:id="@+id/logout"
             android:icon="@drawable/ic_facebook_logo"
             android:title="로그아웃" />
+
+        <item
+            android:id="@+id/clear"
+            android:icon="@drawable/ic_distance"
+            android:title="초기화"/>
     </group>
 
 </menu>
