--- a/Project123-googleMap/app/src/main/res/menu/menu_info.xml
+++ b/Project123-googleMap/app/src/main/res/menu/menu_info.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/info"
-        android:icon="@drawable/ic_launcher_foreground"
+        android:icon="@drawable/ic_magnifier"
         android:title="Item"
         app:showAsAction="always" />
 
