--- a/Project123-googleMap/app/src/main/res/layout/login.xml
+++ b/Project123-googleMap/app/src/main/res/layout/login.xml
@@ -6,14 +6,13 @@
     android:gravity="center">
 
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:id="@+id/imageView1"
-        android:layout_margin= "20dp"
-        android:src="@drawable/ic_launcher_foreground"/>
+        android:id="@+id/mainimage"
+        android:layout_width="459dp"
+        android:layout_height="599dp"/>
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/login_button"
+        android:layout_marginTop="10sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </LinearLayout>
