--- a/Project123-googleMap/app/src/main/res/layout/login.xml
+++ b/Project123-googleMap/app/src/main/res/layout/login.xml
@@ -1,19 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center">
+    android:background="@android:color/white"
+    android:gravity="center"
+    android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/mainimage"
-        android:layout_width="459dp"
-        android:layout_height="599dp"/>
+        android:id="@+id/bike1"
+        android:layout_width="119dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="244dp"
+        android:layout_marginTop="236dp"
+        android:src="@drawable/smallbike"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/maintitle"
+        android:layout_width="373dp"
+        android:layout_height="139dp"
+        android:src="@drawable/title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bike1" />
+
+    <ImageView
+        android:id="@+id/bike2"
+        android:layout_width="105dp"
+        android:layout_height="169dp"
+        android:layout_marginBottom="28dp"
+        android:src="@drawable/rotatebike"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/login_button"
-        android:layout_marginTop="10sp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.52"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/maintitle"
+        app:layout_constraintVertical_bias="0.147" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
 
