--- a/Project123-googleMap/app/src/main/res/menu/nav_content.xml
+++ b/Project123-googleMap/app/src/main/res/menu/nav_content.xml
@@ -6,12 +6,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <item android:title="이동 정보?"
+    <item android:title="예상 경비"
         android:id="@+id/total_info">
         <menu>
             <item
                 android:id="@+id/money"
                 android:icon="@drawable/ic_money"
+                android:title="@string/none"/>
+            <item
+                android:id="@+id/taxi"
+                android:icon="@drawable/ic_taxi"
                 android:title="@string/none"/>
             <item
                 android:id="@+id/total_time"
@@ -28,7 +32,7 @@
         </menu>
     </item>
 
-    <item android:title="출발지부터 대여소"
+    <item android:title="출발지 ~ 타슈 대여소"
         android:id="@+id/first">
         <menu>
             <item
@@ -42,7 +46,7 @@
         </menu>
     </item>
 
-    <item android:title="대여소부터 반납소"
+    <item android:title="타슈 대여소 ~ 타슈 반납소"
         android:id="@+id/second">
         <menu>
             <item
@@ -56,7 +60,7 @@
         </menu>
     </item>
 
-    <item android:title="반납소부터 목적지"
+    <item android:title="타슈 반납소 ~ 목적지"
         android:id="@+id/third">
         <menu>
             <item
